--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frontend development</title>
 </head>
 <body>
-    
+    <h1>SHAIK KHAJA AMEEN</h1>
+    <p>This is Experiment-1</p>
+
 </body>
 </html>
